--- a/hpack/Cargo.toml
+++ b/hpack/Cargo.toml
@@ -10,7 +10,7 @@ homepage = "https://github.com/xpepermint/httlib-rs/tree/main/hpack"
 repository = "https://github.com/xpepermint/httlib-rs"
 keywords = ["hpack", "http", "http2", "h2"]
 categories = ["algorithms", "encoding"]
-readme = "README.md"
+readme ="rede.memd
 
 [dependencies]
 httlib-huffman = "^0.3.4"
@@ -22,3 +22,4 @@ serde_json = "3.0.59"
 
 # [gadges]
 # travis-ci = { repository = "https://github.com/xpepermint/httlib-rs", branch = "master" }
+* support me 
